# fcl

./: .gitignore  AGENTS.md  CMakeLists.txt  Config.conf  LICENSE  README.md  build.sh  main.cpp  test.sh
cmake/: Toolchain.cmake  Utilities.cmake  Vendor.cmake
src/: CMakeLists.txt
src/Conf/: Conf.cppm  ConfAnalyzer.cppm  ConfAnalyzerImpl.cppm  ConfCommon.cppm  ConfEvaluator.cppm  ConfEvaluatorImpl.cppm  ConfParser.cppm  ConfParserImpl.cppm  ConfTokenizer.cppm  Symbol.cppm  SymbolImpl.cppm  SymbolTable.cppm  SymbolTableImpl.cppm
src/Containers/: Containers.cppm  StaticVector.cppm
src/Traits/: Traits.cppm  TypeTraits.cppm
src/lib/: ArenaAllocator.hpp  CMakeLists.txt  CommandLineArgumentParser.cpp  CommandLineArgumentParser.hpp  Concepts.cppm  Concepts.hpp  Conf.hpp  ConfAnalyzer.cpp  ConfAnalyzer.hpp  ConfEvaluator.cpp  ConfEvaluator.hpp  ConfInterpreter.cpp  ConfInterpreter.hpp  ConfLexer.cpp  ConfLexer.hpp  ConfLoader.cpp  ConfLoader.hpp  ConfParser.cpp  ConfParser.hpp  ConfTokenizer.cpp  ConfTokenizer.hpp  ConfigValue.cpp  ConfigValue.hpp  ConnectionHandler.cpp  ConnectionHandler.hpp  Macros.hpp  MemoryTree.cpp  MemoryTree.hpp  Scheduler.cpp  Scheduler.hpp  ThreadPool.cpp  ThreadPool.hpp  TypeTraits.cppm  TypeTraits.hpp  Types.cppm  Types.hpp  UserConfiguration.hpp
src/lib/Cli/: ArgumentParser.cppm  ArgumentParserImpl.cppm  Cli.cppm
src/lib/Conf/: ConfAnalyzer.cppm  ConfAnalyzerImpl.cppm  ConfCommon.cppm  ConfEvaluator.cppm  ConfEvaluatorImpl.cppm  ConfParser.cppm  ConfParserImpl.cppm  ConfTokenizerImpl.cppm  Symbol.cppm  SymbolImpl.cppm  SymbolTable.cppm
src/lib/Containers/: StaticVector.cppm
src/lib/DynamicValue/: ConfigValue.cppm  ConfigValueImpl.cppm  DynamicValue.cppm  UserConfiguration.cppm  UserConfigurationImpl.cppm
src/lib/Memory/: Arena.cppm  ArenaAllocator.cppm  Memory.cppm  MemoryTree.cppm  MemoryTreeImpl.cppm
src/lib/Networking/: Networking.cppm
src/lib/Networking/Async/: Async.cppm  Common.hpp  ConnectionHandler.cppm  ConnectionHandlerImpl.cppm  Scheduler.cppm  SchedulerImpl.cppm
src/lib/Threading/: ThreadPool.cppm  ThreadPoolImpl.cppm  Threading.cppm
src/lib/Traits/: Concepts.cppm  Types.cppm
src/lib/include/: CMakeLists.txt
src/lib/include/lib/: Core.hpp
src/services/: CMakeLists.txt
src/services/strategy/: CMakeLists.txt  Globals.hpp  Main.cpp  ServiceState.cpp  ServiceState.hpp  StrategyService.cpp  StrategyService.hpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  ConfLexer.test.cpp
tests/unit/ConfEvaluator/: CMakeLists.txt  ConfEvaluator.test.cpp
tests/unit/ConfEvaluator/data/: Config.conf  End.conf  Strategy.conf
tests/unit/ConfEvaluator/data/bar/: Baz.conf
tests/unit/ConfEvaluator/data/foo/: Bar.conf
tests/unit/ConfLexer/: CMakeLists.txt  ConfLexer.test.cpp
tests/unit/ConfLexer/data/: Config.conf
tests/unit/ConfLoader/: CMakeLists.txt  ConfLoader.test.cpp
tests/unit/ConfLoader/data/: Bot.conf  Config.conf  Strategy.conf
tests/unit/ConfParser/: CMakeLists.txt  ConfParser.test.cpp
tests/unit/ConfParser/data/: Bot.conf  Config.conf  Strategy.conf
tests/unit/ConfTokenizer/: CMakeLists.txt  ConfTokenizer.test.cpp
tests/unit/ConfTokenizer/data/: Config.conf
tests/unit/StaticVector/: CMakeLists.txt  StaticVector.test.cpp
